Ajout nouvel appareil version 1

--- a/src/pages/appareils/appareils.html
+++ b/src/pages/appareils/appareils.html
@@ -16,4 +16,5 @@
                 {{ appareil.name }}
         </button>
     </ion-list>
+    <button ion-button full (click)="onNewAppareil()">Nouvel appareil</button>
 </ion-content>
