--- a/src/pages/appareils/appareil-form/appareil-form.html
+++ b/src/pages/appareils/appareil-form/appareil-form.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the AppareilFormPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>appareilForm</ion-title>
+    <ion-title>Nouvel appareil</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-
+  <form [formGroup]="appareilForm">
+    <ion-list>
+      <ion-item-divider>Informations</ion-item-divider>
+      <ion-item>
+        <ion-label>Nom</ion-label>
+        <ion-input placeholder="Appareil" formControlName="name"></ion-input>
+      </ion-item>
+      <ion-item-divider>Description</ion-item-divider>
+      <div formArrayName="description">
+        <ion-item *ngFor="let control of getDescriptionArray().controls; let i = index">
+          <ion-icon item-start
+                    name="remove-circle"
+                    color="danger"
+                    (click)="onRemoveDescription(i)">
+          </ion-icon>
+          <ion-input [formControlName]="i" placeholder="i+1 + '.'"></ion-input>
+        </ion-item>
+      </div>
+    </ion-list>
+    <button ion-button full (click)="onAddDescription">Ajouter une ligne</button>
+    <button ion-button full (click)="onSubmitForm()">Enregistrer</button>
+  </form>
 </ion-content>
